# mc-library

./: .gitignore  CMakeLists.txt
fonts/: CMakeLists.txt  helvetica_12.c  mc-font.h
lib/: CMakeLists.txt  libtest.c  linked_list.c  linked_list.h  mc-display.c  mc-display.h  mc-draw.c  mc-draw.h  mc-geometry.c  mc-geometry.h  mc-input.c  mc-input.h  mc-menu.c  mc-menu.h  mc-obj.c  mc-obj.h  mc-shapes.c  mc-shapes.h  mc-text.c  mc-text.h
src/: CMakeLists.txt  main.c
tests/: CMakeLists.txt  test-draw.c  test-draw.h  test-ll.c  test-menu.c  test-obj.c  test-text.c  test-text.h
